# django-next-ws-transcription

./: README.md  blog.md  declarations.d.ts
backend/: db.sqlite3  manage.py  pyproject.toml
backend/transcription/: api.py  consumers.py  models.py  routing.py
backend/wstranscription/: asgi.py  settings.py  urls.py  wsgi.py
frontend/src/app/transcriptions/[id]/: page.tsx
frontend/src/components/: LiveTranscription.tsx  Visualizer.tsx
frontend/src/services/: transcriptionService.ts
